--- a/index.css
+++ b/index.css
@@ -39,13 +39,6 @@ header .site-logo {
     font-size: 25px;
 }
 
-a.active-link {
-    font-weight: bold;
-    text-decoration: underline;
-    color: #161616;
-}
-
-
 header a {
     text-decoration: none;
     color: #4D4D4D;
@@ -264,9 +257,9 @@ i[class*='van-type-'] {
     text-decoration: none;
 }
 
-/* .van-detail-container .back-button:visited {
+.van-detail-container .back-button:visited {
 
-} */
+}
 
 .van-detail-container .back-button span {
     text-decoration: underline;
@@ -323,4 +316,42 @@ i[class*='van-type-'] {
     color: #161616;
     text-decoration: underline;
     font-weight: 600;
+}
+
+.host-van-link-wrapper {
+    color: unset;
+    text-decoration: unset;
+}
+
+.host-vans-list {
+    padding-inline: 26px;
+}
+
+.host-vans-title {
+    padding-inline: 26px;
+}
+
+.host-van-single {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    margin-bottom: 15px;
+    padding-block: 18px;
+    padding-left: 24px;
+}
+
+.host-van-single > img {
+    height: 70px;
+    border-radius: 5px;
+    margin-right: 17px;
+}
+
+.host-van-info h3 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-block: 10px;
+}
+
+.host-van-info p {
+    margin-block: 10px;
 }
