--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     background-color: #FFF7ED;
@@ -15,12 +16,12 @@ a {
 }
 
 body::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 body {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .site-wrapper {
@@ -211,7 +212,7 @@ footer {
     flex-wrap: wrap;
 }
 
-.van-list-filter-buttons > a {
+.van-list-filter-buttons>a {
     margin-right: 15px;
 }
 
@@ -262,15 +263,18 @@ footer {
     color: #FFEAD0;
 }
 
-.van-type.simple:hover, .van-type.simple.selected {
+.van-type.simple:hover,
+.van-type.simple.selected {
     background-color: #E17654;
 }
 
-.van-type.rugged:hover, .van-type.rugged.selected {
+.van-type.rugged:hover,
+.van-type.rugged.selected {
     background-color: #115E59;
 }
 
-.van-type.luxury:hover, .van-type.luxury.selected {
+.van-type.luxury:hover,
+.van-type.luxury.selected {
     background-color: #161616;
 }
 
@@ -300,9 +304,7 @@ i[class*='van-type-'] {
     text-decoration: none;
 }
 
-.van-detail-container .back-button:visited {
-
-}
+.van-detail-container .back-button:visited {}
 
 .van-detail-container .back-button span {
     text-decoration: underline;
@@ -324,7 +326,7 @@ i[class*='van-type-'] {
     margin-bottom: 10px;
 }
 
-.van-detail > i {
+.van-detail>i {
     align-self: flex-start;
 }
 
@@ -384,7 +386,7 @@ i[class*='van-type-'] {
     padding-left: 24px;
 }
 
-.host-van-single > img {
+.host-van-single>img {
     height: 70px;
     border-radius: 5px;
     margin-right: 17px;
@@ -411,20 +413,20 @@ i[class*='van-type-'] {
     align-items: center;
 }
 
-.host-van-detail > img {
+.host-van-detail>img {
     height: 160px;
     border-radius: 5px;
     margin-right: 20px;
 }
 
-.host-van-detail-info-text > h3 {
+.host-van-detail-info-text>h3 {
     margin-top: 24px;
     margin-bottom: 5px;
     font-size: 26px;
     font-weight: 700;
 }
 
-.host-van-detail-info-text > h4 {
+.host-van-detail-info-text>h4 {
     font-size: 20px;
     margin-block: 0;
 }
@@ -455,12 +457,13 @@ i[class*='van-type-'] {
     font-weight: 700;
 }
 
-.host-van-detail-info > h4 {
+.host-van-detail-info>h4 {
     font-weight: 700;
     font-size: 14px;
     line-height: 21px;
 }
-.host-van-detail-info > h4 > span {
+
+.host-van-detail-info>h4>span {
     font-weight: 500;
 }
 
@@ -469,7 +472,7 @@ i[class*='van-type-'] {
     font-weight: 500;
 }
 
-.host-van-price > span {
+.host-van-price>span {
     font-size: 16px;
     color: #4D4D4D;
 }
@@ -503,7 +506,7 @@ i[class*='van-type-'] {
     max-width: 500px;
 }
 
-.login-form > input {
+.login-form>input {
     border: 1px solid rgba(209, 213, 219);
     height: 40px;
     text-indent: 10px;
@@ -512,20 +515,20 @@ i[class*='van-type-'] {
     font-weight: 400;
 }
 
-.login-form > input:focus {
+.login-form>input:focus {
     outline: none;
 }
 
-.login-form > input:first-of-type {
+.login-form>input:first-of-type {
     border-radius: 6px 6px 0px 0px;
 }
 
-.login-form > input:last-of-type {
+.login-form>input:last-of-type {
     border-radius: 0px 0px 6px 6px;
     border-top: none;
 }
 
-.login-form > button {
+.login-form>button {
     background-color: #FF8C38;
     border: none;
     border-radius: 6px;
@@ -535,11 +538,207 @@ i[class*='van-type-'] {
     font-family: "Inter", sans-serif;
 }
 
-.login-form > button:disabled {
+.login-form>button:disabled {
     background-color: #aaaaaa;
     cursor: not-allowed;
 }
 
 .red {
     color: #cc0000;
+}
+
+.host-dashboard-earnings {
+    background-color: #ffead0;
+    padding: 37px 26px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.host-dashboard-earnings>.info>h1 {
+    font-size: 36px;
+    color: #161616;
+    margin: 0;
+}
+
+.host-dashboard-earnings>.info>p {
+    color: #4d4d4d;
+}
+
+.host-dashboard-earnings>.info>p>span {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.host-dashboard-earnings>.info>h2 {
+    margin: 0;
+    font-size: 38px;
+    color: #161616;
+    font-weight: 900;
+}
+
+.host-dashboard-reviews {
+    background-color: #ffddb2;
+    padding: 25px 26px;
+    display: flex;
+    align-items: center;
+}
+
+.host-dashboard-reviews>h2 {
+    margin: 0;
+}
+
+.host-dashboard-reviews .star {
+    color: #ff8c38;
+    margin-left: 15px;
+    font-size: 25px;
+}
+
+.host-dashboard-reviews p {
+    margin-left: 5px;
+    font-size: 20px;
+    color: #4d4d4d;
+    margin-right: auto;
+}
+
+.host-dashboard-reviews p>span {
+    font-weight: bold;
+    color: #161616;
+}
+
+.host-dashboard-vans {
+    padding: 38px 26px;
+}
+
+.host-dashboard-vans>.top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.host-dashboard-vans .host-vans-list {
+    padding-inline: 0;
+}
+
+.host-income {
+    padding-inline: 26px;
+    color: #161616;
+}
+
+.host-income>p {
+    color: #4d4d4d;
+}
+
+.host-income>p span {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.host-income>h2 {
+    font-size: 38px;
+    color: #161616;
+    font-weight: 900;
+}
+
+img.graph {
+    width: 100%;
+    max-width: 500px;
+}
+
+.host-income .info-header>p {
+    color: #4d4d4d;
+}
+
+.host-income .info-header>p span {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.host-income .info-header>h3 {
+    font-weight: 700;
+    font-size: 24px;
+    margin-top: 60px;
+}
+
+.host-income .transaction {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    margin-bottom: 31px;
+    padding: 35px 29px;
+    border-radius: 6px;
+}
+
+.host-income .transaction>h3 {
+    font-size: 36px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.host-income .transaction>p {
+    font-weight: 500;
+    font-size: 20px;
+    color: #4d4d4d;
+}
+
+.host-reviews {
+    padding-inline: 26px;
+    color: #161616;
+}
+
+.host-reviews .top-text {
+    display: flex;
+    align-items: center;
+    margin-bottom: 32px;
+}
+
+.host-reviews .top-text>h2 {
+    font-weight: 700;
+    font-size: 32px;
+    margin: 0;
+    margin-right: 20px;
+}
+
+.host-reviews .top-text>p {
+    margin: 0;
+    color: #4d4d4d;
+}
+
+.host-reviews .top-text>p span {
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.host-reviews>img {
+    margin-bottom: 36px;
+}
+
+.host-reviews .review {
+    margin-block: 25px;
+}
+
+.host-reviews .review .info {
+    display: flex;
+}
+
+.host-reviews .review .name {
+    color: #161616;
+    margin-right: 10px;
+    font-weight: 600;
+}
+
+.host-reviews .review .date {
+    color: #8c8c8c;
+}
+
+.host-reviews hr {
+    background-color: #c7c7c7;
+    height: 1px;
+    border: 0;
+}
+
+.host-reviews .review-star {
+    color: #ff8c38;
+    margin-right: 5px;
 }
